spacing fix for mobile navbar links

--- a/assets/less/header.less
+++ b/assets/less/header.less
@@ -21,7 +21,7 @@ nav.site-header {
 
       // search field
       div.form-group.has-feedback{
-         padding: 0px 50px;
+         padding: 0px;
          margin-bottom: 10px;
 
          input.search-field{
@@ -56,7 +56,7 @@ nav.site-header {
       
       // links
       ul.nav.navbar-nav {
-         padding: 0px 50px;
+         padding: 0px;
          margin-top: 0px;
          margin-bottom: 0px;
          li{
@@ -64,7 +64,7 @@ nav.site-header {
             padding-top: 0px;
             a{
                border-bottom: 1px solid #333;
-               padding: 0 5px;
+               padding: 0 12px;
                padding-bottom: 10px;
                color: #999;
                background: none;
